[package]
name = "rust_backend_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0.0-beta.8"
tokio = { version = "1", features = ["full"] }
redis = "0.21.0"
actix-redis = "0.9.1"